// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Pick screen render tests renders the screen when items are move to front 1`] = `
<ForwardRef(SafeAreaView)
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "padding": 7,
      }
    }
  >
    <ItemInfo
      category="72 - Deli"
      exceptionType={null}
      itemName="treacle tart"
      itemNbr={2}
      price={4.92}
      status=""
      upcNbr="8675309"
    />
  </View>
  <View
    style={
      Object {
        "borderBottomWidth": 2,
        "borderColor": "#c5c5c5",
        "borderTopWidth": 2,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#c5c5c5",
          "borderTopWidth": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <mockConstructor
        name="map-marker-outline"
        size={40}
      />
      <Text>
        [missing "en.ITEM.LOCATION" translation]
      </Text>
      <Memo(Pressable)
        onPress={[Function]}
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#0071e9",
            }
          }
        >
          [missing "en.GENERICS.ADD" translation]
        </Text>
      </Memo(Pressable)>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#c5c5c5",
          "borderTopWidth": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.RESERVE_LOC" translation]
      </Text>
      <Text />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#c5c5c5",
          "borderTopWidth": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.FLOOR_LOC" translation]
      </Text>
      <View
        style={
          Object {
            "borderColor": "#c5c5c5",
            "borderRadius": 10,
            "borderWidth": 1,
            "width": "65%",
          }
        }
      >
        <Picker
          mode="dropdown"
          onValueChange={[Function]}
          selectedValue="moveToFront"
          testID="sectionPicker"
        >
          <PickerItem
            label="ABAR1-1"
            value="ABAR1-1"
          />
          <PickerItem
            label="ABAR1-2"
            value="ABAR1-2"
          />
          <PickerItem
            label="[missing \\"en.PICKING.MOVE_TO_FRONT\\" translation]"
            value="moveToFront"
          />
        </Picker>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#c5c5c5",
          "borderTopWidth": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.NUMBER_PALLETS" translation]
      </Text>
      <NumericSelector
        isValid={true}
        maxValue={99}
        minValue={1}
        onDecreaseQty={[Function]}
        onIncreaseQty={[Function]}
        onTextChange={[Function]}
        value={1}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": "auto",
        "padding": 10,
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={true}
      height={45}
      onPress={[Function]}
      radius={5}
      testId="createButton"
      title="[missing \\"en.GENERICS.CREATE\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</ForwardRef(SafeAreaView)>
`;

exports[`Create Pick screen render tests renders the screen with item with floor locations 1`] = `
<ForwardRef(SafeAreaView)
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "padding": 7,
      }
    }
  >
    <ItemInfo
      category="72 - Deli"
      exceptionType={null}
      itemName="treacle tart"
      itemNbr={2}
      price={4.92}
      status=""
      upcNbr="8675309"
    />
  </View>
  <View
    style={
      Object {
        "borderBottomWidth": 2,
        "borderColor": "#c5c5c5",
        "borderTopWidth": 2,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#c5c5c5",
          "borderTopWidth": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <mockConstructor
        name="map-marker-outline"
        size={40}
      />
      <Text>
        [missing "en.ITEM.LOCATION" translation]
      </Text>
      <Memo(Pressable)
        onPress={[Function]}
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#0071e9",
            }
          }
        >
          [missing "en.GENERICS.ADD" translation]
        </Text>
      </Memo(Pressable)>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#c5c5c5",
          "borderTopWidth": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.RESERVE_LOC" translation]
      </Text>
      <Text>
        ABAR2-2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#c5c5c5",
          "borderTopWidth": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.FLOOR_LOC" translation]
      </Text>
      <View
        style={
          Object {
            "borderColor": "#c5c5c5",
            "borderRadius": 10,
            "borderWidth": 1,
            "width": "65%",
          }
        }
      >
        <Picker
          mode="dropdown"
          onValueChange={[Function]}
          selectedValue="ABAR1-1"
          testID="sectionPicker"
        >
          <PickerItem
            label="ABAR1-1"
            value="ABAR1-1"
          />
          <PickerItem
            label="ABAR1-2"
            value="ABAR1-2"
          />
          <PickerItem
            label="[missing \\"en.PICKING.MOVE_TO_FRONT\\" translation]"
            value="moveToFront"
          />
        </Picker>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": "auto",
        "padding": 10,
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      testId="createButton"
      title="[missing \\"en.GENERICS.CREATE\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</ForwardRef(SafeAreaView)>
`;

exports[`Create Pick screen render tests renders the screen with no reserve location 1`] = `
<ForwardRef(SafeAreaView)
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "padding": 7,
      }
    }
  >
    <ItemInfo
      category="72 - Deli"
      exceptionType={null}
      itemName="treacle tart"
      itemNbr={2}
      price={4.92}
      status=""
      upcNbr="8675309"
    />
  </View>
  <View
    style={
      Object {
        "borderBottomWidth": 2,
        "borderColor": "#c5c5c5",
        "borderTopWidth": 2,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#c5c5c5",
          "borderTopWidth": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <mockConstructor
        name="map-marker-outline"
        size={40}
      />
      <Text>
        [missing "en.ITEM.LOCATION" translation]
      </Text>
      <Memo(Pressable)
        onPress={[Function]}
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#0071e9",
            }
          }
        >
          [missing "en.GENERICS.ADD" translation]
        </Text>
      </Memo(Pressable)>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#c5c5c5",
          "borderTopWidth": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.RESERVE_LOC" translation]
      </Text>
      <Text />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#c5c5c5",
          "borderTopWidth": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.FLOOR_LOC" translation]
      </Text>
      <View
        style={
          Object {
            "borderColor": "#c5c5c5",
            "borderRadius": 10,
            "borderWidth": 1,
            "width": "65%",
          }
        }
      >
        <Picker
          mode="dropdown"
          onValueChange={[Function]}
          selectedValue="ABAR1-1"
          testID="sectionPicker"
        >
          <PickerItem
            label="ABAR1-1"
            value="ABAR1-1"
          />
          <PickerItem
            label="ABAR1-2"
            value="ABAR1-2"
          />
          <PickerItem
            label="[missing \\"en.PICKING.MOVE_TO_FRONT\\" translation]"
            value="moveToFront"
          />
        </Picker>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": "auto",
        "padding": 10,
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={true}
      height={45}
      onPress={[Function]}
      radius={5}
      testId="createButton"
      title="[missing \\"en.GENERICS.CREATE\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</ForwardRef(SafeAreaView)>
`;

exports[`Create Pick screen render tests renders the screen without floor locations 1`] = `
<ForwardRef(SafeAreaView)
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "padding": 7,
      }
    }
  >
    <ItemInfo
      category="72 - Deli"
      exceptionType={null}
      itemName="treacle tart"
      itemNbr={2}
      price={4.92}
      status=""
      upcNbr="8675309"
    />
  </View>
  <View
    style={
      Object {
        "borderBottomWidth": 2,
        "borderColor": "#c5c5c5",
        "borderTopWidth": 2,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#c5c5c5",
          "borderTopWidth": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <mockConstructor
        name="map-marker-outline"
        size={40}
      />
      <Text>
        [missing "en.ITEM.LOCATION" translation]
      </Text>
      <Memo(Pressable)
        onPress={[Function]}
        style={
          Object {
            "marginLeft": "auto",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#0071e9",
            }
          }
        >
          [missing "en.GENERICS.ADD" translation]
        </Text>
      </Memo(Pressable)>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#c5c5c5",
          "borderTopWidth": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.RESERVE_LOC" translation]
      </Text>
      <Text>
        ABAR2-2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#c5c5c5",
          "borderTopWidth": 2,
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.FLOOR_LOC" translation]
      </Text>
      <View
        style={
          Object {
            "borderColor": "#c5c5c5",
            "borderRadius": 10,
            "borderWidth": 1,
            "width": "65%",
          }
        }
      >
        <Picker
          mode="dropdown"
          onValueChange={[Function]}
          selectedValue="ABAR1-1"
          testID="sectionPicker"
        >
          <PickerItem
            label="[missing \\"en.PICKING.SELECT_LOCATION\\" translation]"
            value=""
          />
          <PickerItem
            label="[missing \\"en.PICKING.MOVE_TO_FRONT\\" translation]"
            value="moveToFront"
          />
        </Picker>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": "auto",
        "padding": 10,
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      testId="createButton"
      title="[missing \\"en.GENERICS.CREATE\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</ForwardRef(SafeAreaView)>
`;
